--- a/client/navigation/navigation.css
+++ b/client/navigation/navigation.css
@@ -1,15 +1,17 @@
-.right-align {
-	position:absolute;
-	right:0;
-}
 
 /*.navbar-default {
 	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }*/
 
-a:hover {
+a.nav-links:hover {
   text-decoration:none;
   font-weight:bold;
 }
 
 .container-fluid {}
+
+@media (min-width: 767px) {
+	.navbar-right {
+	    float: right !important;
+	}
+}
